--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
              python-version: 3.8
+             
+
+    # this Action should follow steps to set up Python build environment
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v2
+        with:
+          packages: |
+                    nsetools        
 
       # Runs a set of commands using the runners shell
       - name: execute py script # run the run.py to get the latest data
