--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v2
         with:
-          packages: |
-                    nsetools        
-
+          path: requirements.txt
       # Runs a set of commands using the runners shell
       - name: execute py script # run the run.py to get the latest data
         run: |
