--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
 
     # this Action should follow steps to set up Python build environment
       - name: Install Python dependencies
-        uses: py-actions/py-dependency-install@v2
-        with:
-          path: requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       # Runs a set of commands using the runners shell
       - name: execute py script # run the run.py to get the latest data
         run: |
